--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: ckb_localizations
 description: "Support for kurdish sorani language ckb"
 version: 0.0.1
+homepage: https://github.com/masreplay/ckb_localizations
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
