--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,9 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
   flutter: ">=1.17.0"
 
-
 scripts:
   publish: dart pub publish --force
+  fix-format: dart fix --apply && dart format -o write ./lib
 
 dependencies:
   flutter:
