--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "cSpell.words": [
-        "sorani"
-    ]
+  "cSpell.words": [
+    "sorani"
+  ],
+  "dart.flutterSdkPath": ".fvm/versions/3.22.2"
 }
