--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ckb_localizations
 description: "Support for kurdish sorani language ckb"
-version: 0.0.6
+version: 0.1.0
 homepage: https://github.com/masreplay/ckb_localizations
 
 environment:
@@ -24,3 +24,4 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  generate: true
