chore: update Flutter SDK to 3.27.2 and bump dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "cSpell.words": [
     "sorani"
   ],
-  "dart.flutterSdkPath": ".fvm/versions/3.22.2"
+  "dart.flutterSdkPath": ".fvm/flutter_sdk"
 }
